@@ -44,10 +44,10 @@ if test "$HAVE_LIBXML2" = "no"; then
 fi
 
 # check for libcurl
-PKG_CHECK_MODULES(LIBCURL, libcurl, [HAVE_LIBCURL=yes], [HAVE_LIBCURL=no])
-if test "$HAVE_LIBCURL" = "no"; then
-   AC_MSG_ERROR("cannot find libcurl library")
-fi
+#PKG_CHECK_MODULES(LIBCURL, libcurl, [HAVE_LIBCURL=yes], [HAVE_LIBCURL=no])
+#if test "$HAVE_LIBCURL" = "no"; then
+#   AC_MSG_ERROR("cannot find libcurl library")
+#fi
 
 # check for libmagic, that has no pkg-config
 AC_CHECK_LIB(magic, magic_open, [HAVE_LIBMAGIC=yes], [HAVE_LIBMAGIC=no])
